bootstrap/css/custom style.css
#header{
    position: absolute;
    z-index:10;
    width: 100%;
    
}
body{
  background-color:  rgb(217, 197, 236);;
}
.navbar{
    padding: 2px;
}
#navbarNav{
  overflow-x: hidden
}

.navbar-brand{
    font-weight: bold;
    font-size: 1.5em;
    text-transform: uppercase;
    color: rgb(20, 20, 20);
}

.nav-item{
    font-weight: 600px;
    text-transform: uppercase;
    padding-left: 50px;
}

.nav-link{
    color: black ;
    letter-spacing: 2px;
    font-size: 1em;
    font-weight: 700px;
}
.nav-link:hover{
    background: rgb(119, 117, 117);
    border-radius: 5px;
    transition: all 0.6s ease 0s;
}

/*.main{
    position: relative;
    background-image: url(bootstrap/media/images/myimage.jpg);
    min-height: 100vh;
    background-size: cover;
    background-position: center;
    padding: 280px 0px 220px ;
    
}*/

#row{
    position: absolute;
    bottom: 0;
    left: 0;
    line: height 1px;
    padding-left: 2% ;
    padding-bottom: 15%;
    
}
svg{
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 0;
    margin: 2%;
    border-radius: 10px;
    margin-bottom: 8%;

}

#doc{
    text-decoration: none;
    color: black;

}
.btn-light{
    margin-bottom: 10%;
    margin-left: 8%;
    border-radius: 15px;
    width: 250px;
    
}
.btn-light:hover{
    background-color: rgb(105, 152, 240);
    transition: all 0.6s ease 0s;
}
#mentorship{
    border-radius: 15px;
    background-color: rgb(100, 223, 165);
    margin-left: 5px;
}
#club,#f,#G{
    text-decoration: none;
    color: white;
}
#github:hover{
    background-color: rgb(105, 152, 240);
    transition: all 0.6s ease 0s;
}
#mentorship:hover{
    background-color: rgb(105, 152, 240);
    transition: all 0.6s ease 0s;
    
}
#figma:hover{
    background-color: rgb(105, 152, 240);
    transition: all 0.6s ease 0s;
}

#github ,#figma{
  
    border-radius: 15px;
    background-color: rgb(100, 223, 165);
    
    
}
footer,img{
    margin: 15px;
}
footer,a{
    text-decoration: none;
    color: rgb(8, 8, 8);
}
#testimonials{
    background-color: rgb(217, 197, 236);
}
 
  .gtco-testimonials {
    position: relative;
    
   
  }
  
   .gtco-testimonials h2 {
      font-size: 30px;
      text-align: center;
      color: #333333;
      margin-bottom: 10px;
      margin-top: 10px;
    }
  
   .gtco-testimonials .owl-stage-outer {
      padding: 30px 0;
    }
  
   .gtco-testimonials .owl-nav {
      display: none;
    }
  
   .gtco-testimonials .owl-dots {
      text-align: center;
    }
  
   .gtco-testimonials  .owl-dots span {
        position: relative;
        height: 10px;
        width: 10px;
        border-radius: 50%;
        display: block;
        background: #fff;
        border: 2px solid #01b0f8;
        margin: 0 5px;
      }
  
     .gtco-testimonials .active {
        box-shadow: none;
      }
  
      .gtco-testimonials .active  span {
         
          box-shadow: none;
          height: 12px;
          width: 12px;
          margin-bottom: -1px;
        }
    

  
    .card {
      background: #fff;
      box-shadow: 0 8px 30px -7px #c9dff0;
      margin: 0 20px;
      padding: 0 10px;
      border-radius: 20px;
      border: 0;
      height: 800px;
    }
  
     .card .card-img-top {
        max-width: 100px;
        border-radius: 50%;
        margin: 15px auto 0;
        box-shadow: 0 8px 20px -4px #95abbb;
        width: 120px;
        height: 150px;
      }
  
     .card h5 {
        color: #000507;
        font-size: 21px;
        line-height: 1.3;
      }
  
      .card h5 span {
          font-size: 18px;
          color: #414040;
        }
    
  
     .card p {
        font-size: 18px;
        color: #555;
        padding-bottom: 15px;
      }

       
    .active {
      opacity: 0.5;
      transition: all 0.3s;
    }
  
    .center {
      opacity: 1;
    }
  
     .center h5 {
        font-size: 24px;
      }
  
       h5 span {
          font-size: 20px;
        }
     
   
   .owl-carousel {
    outline: 0;
  }
    .owl-nav button {
        outline: 0;
    }
      .owl-next .owl-prev {
        outline: 0;
      }

  
    button.owl-dot {
      outline: 0;
    }
    #familiarity{
      margin-left: 25%;
    }
    #more {
      width: 20%;
      border-radius: 15px;
    }
    #skils{
      margin-bottom: 10%; 
    }
    .testimonials{
      margin-top: 0px;
      margin-bottom: 0px;
    }
    footer{
      margin-top: 0px;
      margin-bottom: 0px;
  
    }
    #fullname , #email , #message {
      width: 90%;
    }
     i:hover{
      color: rgb(8, 126, 223);
    }
#work .card{
  height:95%;
}

